fix version mobile

--- a/index.css
+++ b/index.css
@@ -14,19 +14,23 @@ header {
 
 .logo {
   margin-left: 1rem;
-  height: 4rem;
-  width: 4rem;
+  height: 3rem;
+  width: 3rem;
+  display: none;
 }
 
 .titre {
   margin-left: 1rem;
+  font-size: 1.5em;
+  border: 3px solid;
 }
 
 nav {
-  width: 15%;
-  margin-left: 3rem;
   display: flex;
   justify-content: space-around;
+  gap: 0rem 1rem;
+  margin-right: 0.5rem;
+  margin-left: auto;
 }
 
 .lien_header {
@@ -34,6 +38,7 @@ nav {
   color: black;
   font-weight: 700;
   border-bottom: 2px solid;
+
 }
 
 .lien_header:hover{
@@ -43,10 +48,11 @@ nav {
 
 .banner {
   width: 100%;
-  height: 30rem;
+  height: 20rem;
   display: flex;
   background-image: url("https://media.routard.com/image/82/2/amsterdam.1475822.c1000x300.jpg");
   filter: brightness(75%);
+  background-position: top;
   justify-content: center;
   align-items: center;
 }
